--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -1,7 +1,18 @@
 #root {
-  max-width: 1280px;
-  min-width: 365px;
+  width: 365px;
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-end {
+  justify-content: end;
 }
