--- a/fe/src/components/spinner/Spinner.css
+++ b/fe/src/components/spinner/Spinner.css
@@ -1,3 +1,10 @@
+.spinner-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--backgroundColor);
+}
+
 .lds-dual-ring {
     display: inline-block;
     width: 80px;
