--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -5,8 +5,10 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --backgroundColor: #242424;
+  --color: rgba(255, 255, 255, 0.87);
+  color: var(--color);
+  background-color: var(--backgroundColor);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -73,8 +75,10 @@ button:focus-visible:not([disabled]) {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --color: #213547;
+    --backgroundColor: #FFFFFF;
+    color: var(--color);
+    background-color: var(--backgroundColor);
   }
 
   a:hover {
