--- a/fe/src/components/dropdown/Dropdown.css
+++ b/fe/src/components/dropdown/Dropdown.css
@@ -28,7 +28,7 @@
 .dropdown-item {
     padding: 4px 8px;
     display: block;
-    width: fit-content;
+    min-width: fit-content;
     border: 1px solid transparent;
 }
 
