--- a/fe/src/components/spinner/Spinner.css
+++ b/fe/src/components/spinner/Spinner.css
@@ -3,6 +3,8 @@
     width: 100%;
     height: 100%;
     background-color: var(--backgroundColor);
+    z-index: 999;
+    box-shadow: 0px 50px 15px 50px var(--backgroundColor);
 }
 
 .lds-dual-ring {
