--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -7,6 +7,8 @@
   color-scheme: light dark;
   --backgroundColor: #242424;
   --color: rgba(255, 255, 255, 0.87);
+  --a-color: #646cff;
+  --a-color-hover: #535bf2;
   color: var(--color);
   background-color: var(--backgroundColor);
 
@@ -19,11 +21,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--a-color);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--a-color-hover);
 }
 
 body {
@@ -67,7 +69,7 @@ button:disabled {
 input:hover:not([disabled]),
 button:hover:not([disabled]) {
   cursor: pointer;
-  border-color: #646cff;
+  border-color: var(--a-color);
 }
 
 input:focus:not([disabled]),
@@ -81,13 +83,12 @@ button:focus-visible:not([disabled]) {
   :root {
     --color: #213547;
     --backgroundColor: #FFFFFF;
+    --a-color: #054a91;
+    --a-color-hover: #3e7cb1;
     color: var(--color);
     background-color: var(--backgroundColor);
   }
 
-  a:hover {
-    color: #747bff;
-  }
 
   button {
     background-color: #c9c9c9;
