[IMPL] urlCode setted by user

--- a/fe/src/components/shortUrl/ShortUrl.css
+++ b/fe/src/components/shortUrl/ShortUrl.css
@@ -24,10 +24,17 @@
 
 .opt-container {
     display: flex;
-    justify-content: space-between;
+    gap: .8em;
 }
 
 .qr-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5em;
+}
+
+.code-container {
     display: flex;
     align-items: center;
     justify-content: center;
