[ADD] helmet + [FIX] performance

--- a/fe/src/components/shortUrl/ShortUrl.css
+++ b/fe/src/components/shortUrl/ShortUrl.css
@@ -82,7 +82,7 @@
 
 .short-url-container-close-btn:active,
 .short-url-container-close-btn:hover {
-    color: #646cff;
+    color: var(--a-color);
 }
 
 .short-url-label {
