--- a/fe/src/components/toggleSwitch/ToggleSwitch.css
+++ b/fe/src/components/toggleSwitch/ToggleSwitch.css
@@ -26,7 +26,7 @@
 }
 
 .slider:hover:not(focus) {
-    border-color: #646cff;
+    border-color: var(--a-color);
 }
 
 input:disabled + .slider:hover {
