--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -7,8 +7,8 @@
   color-scheme: light dark;
   --backgroundColor: #242424;
   --color: rgba(255, 255, 255, 0.87);
-  --a-color: #646cff;
-  --a-color-hover: #535bf2;
+  --a-color: #91AEC1;
+  --a-color-hover: #BFD7EA;
   color: var(--color);
   background-color: var(--backgroundColor);
 
