--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,105 +1,124 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  --backgroundColor: #242424;
-  --color: rgba(255, 255, 255, 0.87);
-  --a-color: #91AEC1;
-  --a-color-hover: #BFD7EA;
-  color: var(--color);
-  background-color: var(--backgroundColor);
+	color-scheme: light dark;
+	--backgroundColor: #242424;
+	--color: rgba(255, 255, 255, 0.87);
+	--a-color: #91AEC1;
+	--a-color-hover: #BFD7EA;
+	color: var(--color);
+	background-color: var(--backgroundColor);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 }
 
 a {
-  font-weight: 500;
-  color: var(--a-color);
-  text-decoration: inherit;
+	font-weight: 500;
+	color: var(--a-color);
+	text-decoration: inherit;
 }
 a:hover {
-  color: var(--a-color-hover);
+	color: var(--a-color-hover);
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	margin: 0;
+	display: flex;
+	place-items: center;
+	min-width: 320px;
+	min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+	font-size: 3.2em;
+	line-height: 1.1;
 }
 
 input {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  width: 100%;
-  font-size: 0.8em;
-  font-family: inherit;
-  transition: border-color 0.25s;
+	border-radius: 8px;
+	border: 1px solid transparent;
+	padding: 0.6em 1.2em;
+	width: 100%;
+	font-size: 0.8em;
+	font-family: inherit;
+	transition: border-color 0.25s;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  transition: border-color 0.25s;
+	border-radius: 8px;
+	border: 1px solid transparent;
+	padding: 0.6em 1.2em;
+	font-size: 1em;
+	font-weight: 500;
+	font-family: inherit;
+	background-color: #1a1a1a;
+	transition: border-color 0.25s;
 }
 
 button:disabled {
-  opacity: .4;
+	opacity: .4;
 }
 
 input:hover:not([disabled]),
 button:hover:not([disabled]) {
-  cursor: pointer;
-  border-color: var(--a-color);
+	cursor: pointer;
+	border-color: var(--a-color);
 }
 
 input:focus:not([disabled]),
 input:focus-visible:not([disabled]),
 button:focus:not([disabled]),
 button:focus-visible:not([disabled]) {
-  outline: 4px auto -webkit-focus-ring-color;
+	outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    --color: #213547;
-    --backgroundColor: #FFFFFF;
-    --a-color: #054a91;
-    --a-color-hover: #3e7cb1;
-    color: var(--color);
-    background-color: var(--backgroundColor);
-  }
+	:root {
+		--color: #213547;
+		--backgroundColor: #FFFFFF;
+		--a-color: #054a91;
+		--a-color-hover: #3e7cb1;
+		color: var(--color);
+		background-color: var(--backgroundColor);
+	}
 
+	button {
+		background-color: #c9c9c9;
+	}
 
-  button {
-    background-color: #c9c9c9;
-  }
+	input {
+		background-color: #ececec;
+	}
 
-  input {
-    background-color: #ececec;
-  }
+	.lds-dual-ring:after {
+		border: 6px solid #213547;
+		border-color: #213547 transparent #213547 transparent;
+	}
+}
 
-  .lds-dual-ring:after {
-    border: 6px solid #213547;
-    border-color: #213547 transparent #213547 transparent;
-  }
+.position-relative {
+	position: relative;
+}
+
+.d-flex {
+	display: flex;
+}
+
+.flex-column {
+	flex-direction: column;
+}
+
+.justify-content-between {
+	justify-content: space-between;
+}
+
+.justify-end {
+	justify-content: end;
 }
