--- a/fe/src/components/logoTitle/LogoTitle.css
+++ b/fe/src/components/logoTitle/LogoTitle.css
@@ -126,3 +126,17 @@
     display: flex;
     gap: .3em;
 }
+
+a.logo {
+    font-weight: unset;
+    color: unset;
+    text-decoration: unset;
+}
+
+a.logo:hover,
+a.logo:active,
+a.logo:focus {
+    font-weight: unset;
+    color: unset;
+    text-decoration: unset;
+}
