--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -7,7 +7,7 @@
 	color-scheme: light dark;
 	--backgroundColor: #242424;
 	--color: rgba(255, 255, 255, 0.87);
-	--a-color: #91AEC1;
+	--a-color: #91b7c1;
 	--a-color-hover: #BFD7EA;
 	color: var(--color);
 	background-color: var(--backgroundColor);
@@ -17,6 +17,39 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+}
+
+.h1 {
+	display: block;
+	font-size: 2em;
+	margin-block-start: 0.67em;
+	margin-block-end: 0.67em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
+	font-weight: bold;
+	unicode-bidi: isolate;
+}
+
+.h2 {
+	display: block;
+	font-size: 1.5em;
+	margin-block-start: 0.83em;
+	margin-block-end: 0.83em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
+	font-weight: bold;
+	unicode-bidi: isolate;
+}
+
+.h3 {
+	display: block;
+	font-size: 1.17em;
+	margin-block-start: 1em;
+	margin-block-end: 1em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
+	font-weight: bold;
+	unicode-bidi: isolate;
 }
 
 a {
@@ -77,6 +110,13 @@ input:focus-visible:not([disabled]),
 button:focus:not([disabled]),
 button:focus-visible:not([disabled]) {
 	outline: 4px auto -webkit-focus-ring-color;
+}
+
+p {
+	margin-top: 0;
+	margin-bottom: 0;
+	text-align: left;
+	font-size: .875em;
 }
 
 @media (prefers-color-scheme: light) {
